@@ -388,3 +388,4 @@ Revision	Log Message
 381
 382		Convert forts
 383		Convert universities
+384		Convert textile manufactories
